# cli-calculator

./: README.md  calc.py  pyproject.toml  test_result.txt
cli/: interface.py
core/: evaluator.py  operations.py  parser.py  tokenizer.py
tests/: test_evaluator.py  test_operations.py  test_parser.py  test_tokenizer.py
